@@ -2,12 +2,9 @@
 
 AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/kernel/nfsft
 
-applicationdir = $(bindir)/nfft/applications/iterS2
-
-application_PROGRAMS = iterS2
+noinst_PROGRAMS = iterS2
 
 iterS2_SOURCES = iterS2.c
 iterS2_LDADD = $(top_builddir)/libnfft3.la @fftw3_LDFLAGS@ @fftw3_LIBS@
 
 EXTRA_DIST = iterS2.m writeTestcase.m readTestcase.m README
-application_DATA = $(EXTRA_DIST)
