@@ -2,9 +2,7 @@
 
 AM_CPPFLAGS = -I$(top_srcdir)/include
 
-applicationdir = $(bindir)/nfft/applications/polarFTT
-
-application_PROGRAMS = polar_fft_test mpolar_fft_test linogram_fft_test
+noinst_PROGRAMS = polar_fft_test mpolar_fft_test linogram_fft_test
 
 polar_fft_test_SOURCES = polar_fft_test.c
 polar_fft_test_LDADD = $(top_builddir)/libnfft3.la
@@ -16,4 +14,3 @@ linogram_fft_test_SOURCES = linogram_fft_test.c
 linogram_fft_test_LDADD = $(top_builddir)/libnfft3.la @fftw3_LDFLAGS@ @fftw3_LIBS@
 
 EXTRA_DIST = phantom.m fft_test.m README
-application_DATA = $(EXTRA_DIST)
