@@ -2,9 +2,7 @@
 
 AM_CPPFLAGS = -I$(top_srcdir)/include
 
-applicationdir = $(bindir)/nfft/applications/radon
-
-application_PROGRAMS = radon inverse_radon
+noinst_PROGRAMS = radon inverse_radon
 
 radon_SOURCES = radon.c
 radon_LDADD = $(top_builddir)/libnfft3.la @fftw3_LDFLAGS@ @fftw3_LIBS@
@@ -13,4 +11,3 @@ inverse_radon_SOURCES = inverse_radon.c
 inverse_radon_LDADD = $(top_builddir)/libnfft3.la @fftw3_LDFLAGS@ @fftw3_LIBS@
 
 EXTRA_DIST = phantom.m radon.m ridgelet.m README
-application_DATA = $(EXTRA_DIST)
