@@ -4,10 +4,10 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/matlab $(matlab_CPPFLAGS)
 
 # application directory
-mexexecdir = $(pkgdatadir)/matlab/nfft
+#mexexecdir = $(bindir)/nfft/matlab/nfft
 
 # library
-mexexec_LTLIBRARIES = libnfft.la
+noinst_LTLIBRARIES = libnfft.la
 libnfft_la_SOURCES = nfftmex.c
 libnfft_la_LIBADD = $(top_builddir)/libnfft3.la $(top_builddir)/matlab/libmatlab.la $(matlab_LIBS)
 libnfft_la_LDFLAGS = -module -shared -shrext $(matlab_mexext) -avoid-version $(matlab_LDFLAGS)
@@ -17,7 +17,7 @@ EXTRA_DIST = FFT_OUT_OF_PLACE.m FFTW_ESTIMATE.m FFTW_MEASURE.m FG_PSI.m Contents
              nfft_init_3d.m nfft_init_guru.m nfft_precompute_psi.m nfft_set_f.m nfft_set_f_hat.m nfft_set_x.m nfft_trafo.m \
              nfftmex.m PRE_FG_PSI.m PRE_FULL_PSI.m PRE_LIN_PSI.m PRE_PHI_HUT.m PRE_PSI.m simple_test.m
 
-mexexec_DATA = $(EXTRA_DIST)
+#mexexec_DATA = $(EXTRA_DIST)
 
 nfftmex@matlab_mexext@: .libs/libnfft@matlab_mexext@
 	rm -f ./nfftmex@matlab_mexext@
@@ -28,5 +28,5 @@ all: all-am nfftmex@matlab_mexext@
 clean: clean-am
 	rm -f ./nfftmex@matlab_mexext@
 
-install-exec-hook:
-	$(LN_S) $(mexexecdir)/libnfft@matlab_mexext@ $(mexexecdir)/nfftmex@matlab_mexext@
+#install-exec-hook:
+#	$(LN_S) $(mexexecdir)/libnfft@matlab_mexext@ $(mexexecdir)/nfftmex@matlab_mexext@
