@@ -6,10 +6,10 @@ SUBDIRS = @f_hat
 AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/matlab $(matlab_CPPFLAGS)
 
 # application directory
-mexexecdir = $(pkgdatadir)/matlab/nfsft
+#mexexecdir = $(bindir)/nfft/matlab/nfsft
 
 # library
-mexexec_LTLIBRARIES = libnfsft.la
+noinst_LTLIBRARIES = libnfsft.la
 libnfsft_la_SOURCES = nfsftmex.c
 libnfsft_la_LIBADD = $(top_builddir)/libnfft3.la $(top_builddir)/matlab/libmatlab.la $(matlab_LIBS)
 libnfsft_la_LDFLAGS = -module -shared -shrext $(matlab_mexext) -avoid-version $(matlab_LDFLAGS)
@@ -23,7 +23,7 @@ EXTRA_DIST = cc.m Contents.m f_hat_index.m ndsft_adjoint.m ndsft_trafo.m \
   nfsft_trafo.m NFSFT_USE_DPT.m NFSFT_USE_NDFT.m nfsftmex.m gl.m simple_test.m \
   nfsft_get_f_hat_linear.m nfsft_set_f_hat_linear.m projection.m
 
-mexexec_DATA = $(EXTRA_DIST)
+#mexexec_DATA = $(EXTRA_DIST)
 
 nfsftmex@matlab_mexext@: .libs/libnfsft@matlab_mexext@
 	rm -f ./nfsftmex@matlab_mexext@
@@ -34,5 +34,5 @@ all: all-am nfsftmex@matlab_mexext@
 clean: clean-am
 	rm -f ./nfsftmex@matlab_mexext@
 
-install-exec-hook:
-	$(LN_S) $(mexexecdir)/libnfsft@matlab_mexext@ $(mexexecdir)/nfsftmex@matlab_mexext@
+#install-exec-hook:
+#	$(LN_S) $(mexexecdir)/libnfsft@matlab_mexext@ $(mexexecdir)/nfsftmex@matlab_mexext@
