@@ -1,8 +1,10 @@
 This file contains the version history for NFFT 3.x.x. 
 
 Changes in version 3.1.4:
-  - Fixed an error that occuredwhen trying to create symbolic links to Matlab mex
+  - Fixed an error that occured when trying to create symbolic links to Matlab mex
     files during installation.
+  - All programs from the application and examples subdirectories are no longer
+    installed. The same holds for the Matlab code from the matlab subdirectory. 
 
 Changes in version 3.1.3:
   - Fixed some issues that can cause C++ compilers to fail. Thanks to Romain Bossart.
